# edu-bevy-spaceship-game

./: Cargo.toml  README.md
docs/: game-main.js  index.html
game/: Cargo.toml
game-camera/: Cargo.toml
game-main/: Cargo.toml
game-main/src/: main.rs
game-main/src/bundles/: moving.rs
game-main/src/plugins/: assets.rs  asteroids.rs  despawn.rs  mod.rs  spaceship.rs
game/src/bundles/: mod.rs
game/src/components/: velocity.rs
game/src/plugins/: camera.rs  debug.rs  mod.rs
src/: main.rs  notes.md
src/bundles/: moving.rs
src/components/: collider.rs  mod.rs  velocity.rs
src/plugins/: assets.rs  asteroids.rs  camera.rs  collisions.rs  despawn.rs  mod.rs  movement.rs  spaceship.rs
