[package]
name = "spaceship-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"

[features]
debug = []

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (including Bevy).
[profile.dev.package."*"]
opt-level = 3
